work on mistakes