@@ -8,6 +8,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+
+import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
@@ -31,12 +33,21 @@ public class PlaneCreatorTest {
     public void createPlanes_shouldReturnListOfPlanes_whenAllDotesAreValid(){
 
         List<List<Dot>> mockDotList = Arrays.asList(
-                Arrays.asList(new Dot(10.0, 11.0, 12.0),new Dot(13.0, 14.0, 15.0),
-                        new Dot(21.0, 13.0, 18.0)),
-                Arrays.asList(new Dot(10.0, 11.0, 12.0),new Dot(13.0, 14.0, 15.0),
-                        new Dot(21.0, 13.0, 18.0)),
-                Arrays.asList(new Dot(10.0, 11.0, 12.0),new Dot(13.0, 14.0, 15.0),
-                        new Dot(21.0, 13.0, 18.0))
+                Arrays.asList(
+                        new Dot(new BigDecimal("10.0"), new BigDecimal("11.0"), new BigDecimal("12.0")),
+                        new Dot(new BigDecimal("13.0"), new BigDecimal("14.0"), new BigDecimal("15.0")),
+                        new Dot(new BigDecimal("21.0"), new BigDecimal("13.0"), new BigDecimal("18.0"))
+                ),
+                Arrays.asList(
+                        new Dot(new BigDecimal("10.0"), new BigDecimal("11.0"), new BigDecimal("12.0")),
+                        new Dot(new BigDecimal("13.0"), new BigDecimal("14.0"), new BigDecimal("15.0")),
+                        new Dot(new BigDecimal("21.0"), new BigDecimal("13.0"), new BigDecimal("18.0"))
+                ),
+                Arrays.asList(
+                        new Dot(new BigDecimal("10.0"), new BigDecimal("11.0"), new BigDecimal("12.0")),
+                        new Dot(new BigDecimal("13.0"), new BigDecimal("14.0"), new BigDecimal("15.0")),
+                        new Dot(new BigDecimal("21.0"), new BigDecimal("13.0"), new BigDecimal("18.0"))
+                )
         );
         List<Plane> result = planeCreator.createPlanes(mockDotList);
         assertEquals(3, result.size());
@@ -47,8 +58,11 @@ public class PlaneCreatorTest {
     public void createPlanes_shouldReturnListOfPlanesWithCorrectDots_whenAllDotsAreValid(){
 
         List<List<Dot>> mockDotList = List.of(
-                Arrays.asList(new Dot(10.0, 11.0, 12.0), new Dot(13.0, 14.0, 15.0),
-                        new Dot(21.0, 13.0, 18.0))
+                Arrays.asList(
+                        new Dot(new BigDecimal("10.0"), new BigDecimal("11.0"), new BigDecimal("12.0")),
+                        new Dot(new BigDecimal("13.0"), new BigDecimal("14.0"), new BigDecimal("15.0")),
+                        new Dot(new BigDecimal("21.0"), new BigDecimal("13.0"), new BigDecimal("18.0"))
+                )
         );
         List<Plane> result = planeCreator.createPlanes(mockDotList);
 
@@ -62,10 +76,12 @@ public class PlaneCreatorTest {
     public void createPlanes_shouldReturnListOfPlanesOfCorrectSize_whenSomeDotsAreValid(){
 
         List<List<Dot>> mockDotList = Arrays.asList(
-                Arrays.asList(new Dot(10.0, 11.0, 12.0), new Dot(13.0, 14.0, 15.0),
-                        new Dot(21.0, 13.0, 18.0)),
-                Arrays.asList(new Dot(1.0, 2.0, 3.0), new Dot(2.0, 4.0, 6.0),
-                        new Dot(3.0, 6.0, 9.0))
+                Arrays.asList(new Dot(new BigDecimal("10"), new BigDecimal("11"), new BigDecimal("12")),
+                        new Dot(new BigDecimal("13"), new BigDecimal("14"), new BigDecimal("15")),
+                        new Dot(new BigDecimal("21"), new BigDecimal("13"), new BigDecimal("18"))),
+                Arrays.asList(new Dot(new BigDecimal("1"), new BigDecimal("2"), new BigDecimal("3")),
+                        new Dot(new BigDecimal("2"), new BigDecimal("4"), new BigDecimal("6")),
+                        new Dot(new BigDecimal("3"), new BigDecimal("6"), new BigDecimal("9")))
         );
 
         List<Plane> result = planeCreator.createPlanes(mockDotList);
@@ -86,10 +102,20 @@ public class PlaneCreatorTest {
     private static Stream<Arguments> mockIncorrectDotsListAndCorrectSizeProvider() {
         return Stream.of(
                 arguments(Arrays.asList(
-                        Arrays.asList(new Dot(1.0, 2.0, 3.0), new Dot(2.0, 4.0, 6.0),new Dot(3.0, 6.0, 9.0)),
-                        Arrays.asList(new Dot(3.0, 4.0, 5.0), new Dot(6.0, 8.0, 10.0),new Dot(9.0, 12.0, 15.0))),0),
-                arguments(List.of(),0)
+                        Arrays.asList(
+                                new Dot(new BigDecimal("1.0"), new BigDecimal("2.0"), new BigDecimal("3.0")),
+                                new Dot(new BigDecimal("2.0"), new BigDecimal("4.0"), new BigDecimal("6.0")),
+                                new Dot(new BigDecimal("3.0"), new BigDecimal("6.0"), new BigDecimal("9.0"))
+                        ),
+                        Arrays.asList(
+                                new Dot(new BigDecimal("3.0"), new BigDecimal("4.0"), new BigDecimal("5.0")),
+                                new Dot(new BigDecimal("6.0"), new BigDecimal("8.0"), new BigDecimal("10.0")),
+                                new Dot(new BigDecimal("9.0"), new BigDecimal("12.0"), new BigDecimal("15.0"))
+                        )
+                ), 0),
+                arguments(List.of(), 0)
         );
+
     }
 
 
